--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml+png" href="https://cdn-icons-png.flaticon.com/128/10053/10053720.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CargoConnect - India's Logistics Partner</title>
+  <script>
+    // Prevent flash of wrong theme by applying it immediately
+    try {
+      const theme = localStorage.getItem('theme');
+      if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    } catch (e) { }
+  </script>
 </head>
 
 <body>
